--- a/styles/style.css
+++ b/styles/style.css
@@ -3,7 +3,7 @@
     src: url("../fonts/bignoodletitling/big_noodle_titling.ttf");
     font-family: "roboto";
     src: url("../fonts/roboto/Roboto-Regular.ttf");
-}
+}/* por alguna razon no puedo hacerla funcionar! */
 body{
     background-color: #e71d36;
 }
